# faliz-ai

./: .env.example  ACTIVATION_GUIDE.md  README.md  docker-compose.yml
apps/backend/: Dockerfile  config.py  main.py  pyproject.toml
apps/backend/ai/: brain.py  memory.py  proactive.py  prompts.py  streaming.py  tools_registry.py
apps/backend/core/: database.py  dependencies.py  exceptions.py  middleware.py  redis.py  security.py
apps/backend/models/: base.py  calendar.py  conversation.py  task.py  user.py
apps/backend/plugins/calendar/: tools.py
apps/backend/plugins/career/: tools.py
apps/backend/plugins/email/: tools.py
apps/backend/plugins/entertainment/: tools.py
apps/backend/plugins/knowledge/: tools.py
apps/backend/plugins/location/: tools.py
apps/backend/plugins/security/: tools.py
apps/backend/plugins/smarthome/: tools.py
apps/backend/plugins/system/: tools.py
apps/backend/plugins/tasks/: tools.py
apps/backend/plugins/vision/: tools.py
apps/backend/plugins/voice/: tools.py
apps/backend/plugins/weather/: tools.py
apps/backend/routers/: auth.py  calendar.py  chat.py  email.py  events.py  health.py  memory.py  plugins.py  system.py  tasks.py  voice.py
apps/backend/schemas/: auth.py  calendar.py  chat.py  task.py
apps/desktop/: electron-builder.yml  package.json
apps/desktop/src/: backend-launcher.js  main.js  preload.js  tray.js  updater.js
apps/frontend/: index.html  package.json  tailwind.config.ts  tsconfig.json
apps/frontend/src/: App.tsx  router.tsx
apps/frontend/src/hooks/: useFaliz.ts  useSSE.ts  useSystemMetrics.ts  useVoice.ts  useWebSocket.ts
apps/frontend/src/services/: ipc.service.ts  notification.service.ts  tts.service.ts  voice.service.ts
(+49 files in other folders)
