[tool.poetry]
name = "faliz-backend"
version = "0.1.0"
description = "FastAPI backend for FALIZ AI"
authors = ["Manus AI <hello@manus.im>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
langchain = "^0.2.0"
langchain-community = "^0.2.0"
langchain-openai = "^0.1.7"
langgraph = "^0.0.19"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
celery = "^5.4.0"
redis = "^5.0.4"
apscheduler = "^3.10.4"
websockets = "^12.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
openai = "^1.30.1"
chromadb = "^0.5.0"
psycopg2-binary = "^2.9.9"
structlog = "^24.1.0"
slowapi = "^0.1.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
"google-auth-oauthlib" = "^1.2.0"
"google-api-python-client" = "^2.126.0"
"google-auth-httplib2" = "^0.2.0"
"twilio" = "^8.10.0"
"pytube" = "^15.0.0"
"elevenlabs" = "^1.2.0"
"pvporcupine" = "^1.9.5"
"sounddevice" = "^0.4.6"
"pyaudio" = "^0.2.14"
"opencv-python" = "^4.9.0.84"
"deepface" = "^0.0.16"
"Pillow" = "^10.3.0"
"tesseract-ocr" = "^0.0.1"
"pytesseract" = "^0.3.10"
"wikipedia-api" = "^0.6.0"
"wolframalpha" = "^5.0.0"
"newsapi-python" = "^0.2.7"
"open-meteo-requests" = "^1.2.0"
"homeassistant-api" = "^0.0.12"
"python-rclone" = "^0.1.1"
"python-crontab" = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
hypercorn = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
